# control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -228,6 +228,64 @@ paths:
           $ref: '#/components/responses/ServerError'
       security:
         - JWT: []
+  '/nodes/{id}/cordon/{label}':
+    put:
+      tags:
+        - Nodes
+      operationId: put_node_cordon
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: label
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Node'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+      security:
+        - JWT: [ ]
+#  '/nodes/{id}/cordon/{label}':
+    delete:
+      tags:
+        - Nodes
+      operationId: delete_node_cordon
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: label
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Node'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+      security:
+        - JWT: [ ]
   '/nodes/{id}/nexuses':
     get:
       tags:
@@ -2010,6 +2068,7 @@ components:
       example:
         grpcEndpoint: '10.1.0.5:10124'
         id: io-engine-1
+        cordonLabels: [label-1]
       description: io-engine storage node information
       type: object
       properties:
@@ -2018,9 +2077,14 @@ components:
           type: string
         id:
           $ref: '#/components/schemas/NodeId'
+        cordonLabels:
+          type: array
+          items:
+            type: string
       required:
         - grpcEndpoint
         - id
+        - cordonLabels
     NodeState:
       example:
         grpcEndpoint: '10.1.0.5:10124'
